# initials-revamped.rs

./: Cargo.toml  LICENSE  README.md
api/: Cargo.toml
api/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
src/: avatar.rs  color.rs  lib.rs
