[package]
name = "initials-revamped"
version = "0.1.2"
description = """
initials avatar for rust
"""
authors = ["ygormartins"]
documentation = "https://github.com/ygormartins/initials-revamped.rs"
homepage = "https://github.com/ygormartins/initials-revamped.rs"
repository = "https://github.com/ygormartins/initials-revamped.rs.git"
readme = "README.md"
keywords = ["image", "avatar", "processing", "initial", "revamp"]
categories = ["multimedia", "multimedia::images", "rendering"]
license = "MIT"

[lib]
name = "initials_revamped"
path = "src/lib.rs"

[[bin]]
name = "bin"
path = "bin/main.rs"

[dependencies]
failure = "0.1.2"
image = "0.24.5"
rusttype = "0.9.3"
rand = "0.8.5"
